@@ -1,20 +1,27 @@
 package com.webest.store.store.application;
 
+import com.webest.app.address.csv.ReadAddressCsv;
+import com.webest.store.store.domain.repository.CustomStoreRepository;
 import com.webest.store.store.presentation.dto.CreateStoreRequest;
+import com.webest.store.store.presentation.dto.DeliveryAreaRequest;
 import com.webest.store.store.presentation.dto.StoreResponse;
 import com.webest.store.store.presentation.dto.UpdateStoreAddressRequest;
-import com.webest.store.store.domain.Store;
-import com.webest.store.store.domain.StoreRepository;
+import com.webest.store.store.domain.model.Store;
+import com.webest.store.store.domain.repository.StoreRepository;
 import com.webest.store.store.exception.StoreErrorCode;
 import com.webest.store.store.exception.StoreException;
-import com.webest.store.store.infra.naver.NaverGeoClient;
-import com.webest.store.store.infra.naver.dto.GeoResponse;
-import com.webest.store.store.infra.naver.dto.NaverAddress;
+import com.webest.store.store.infrastructure.naver.NaverGeoClient;
+import com.webest.store.store.infrastructure.naver.dto.GeoResponse;
+import com.webest.store.store.infrastructure.naver.dto.NaverAddress;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
+import java.time.Duration;
+import java.util.List;
 
 
 @RequiredArgsConstructor
@@ -23,7 +30,13 @@ import org.springframework.transaction.annotation.Transactional;
 public class StoreService {
 
     private final StoreRepository storeRepository;
+    private final CustomStoreRepository customStoreRepository;
     private final NaverGeoClient naverGeoClient;
+    private final ReadAddressCsv readAddressCsv;
+
+    private final RedisTemplate<String, Object> storeRedisTemplate;
+    private static final String STORE_CACHE_PREFIX = "store:";
+    private static final Duration CACHE_EXPIRATION = Duration.ofMinutes(30); // 캐시 만료 시간 설정
 
     // 가게 생성
     // 가게 주소, 위경도, 배달 반경, 배달 팁은 생성 시 설정하지 않고 따로 업데이트
@@ -31,6 +44,11 @@ public class StoreService {
     public StoreResponse saveStore(CreateStoreRequest request) {
         Store store = request.toEntity();
         storeRepository.save(store);
+
+        // 생성 후 캐시 업데이트
+        StoreResponse storeResponse = StoreResponse.of(store);
+        storeRedisTemplate.opsForValue().set(STORE_CACHE_PREFIX + store.getId(), storeResponse, CACHE_EXPIRATION);
+
         return StoreResponse.of(store);
     }
 
@@ -42,12 +60,16 @@ public class StoreService {
         // 네이버 Geocoding API로 위경도 가져오기
         GeoResponse geoResponse = naverGeoClient.getCoordinatesFromAddress(request.address());
         if (geoResponse.getAddresses() != null && !geoResponse.getAddresses().isEmpty()) {
-            NaverAddress addressInfo = geoResponse.getAddresses().getFirst();
+            NaverAddress addressInfo = geoResponse.getAddresses().get(0);
 
             Double latitude = Double.parseDouble(addressInfo.getY()); // 위도
             Double longitude = Double.parseDouble(addressInfo.getX()); // 경도
 
             store.updateAddress(request.address(), latitude, longitude);
+
+            // DTO로 변환하여 캐시 업데이트
+            StoreResponse storeResponse = StoreResponse.of(store);
+            storeRedisTemplate.opsForValue().set(STORE_CACHE_PREFIX + store.getId(), storeResponse, CACHE_EXPIRATION);
 
         } else {
             throw new StoreException(StoreErrorCode.INVALID_ADDRESS);
@@ -55,10 +77,43 @@ public class StoreService {
         return StoreResponse.of(store);
     }
 
+    // 배달 가능 범위 등록 (법정동)
+    @Transactional
+    public StoreResponse updateDeliveryArea(Long storeId, DeliveryAreaRequest request) {
+
+        Store store = findStoreById(storeId);
+
+        // Address code가 존재하는 지 확인
+        request.addressCodeList().forEach(
+                (code) -> {
+                    if (readAddressCsv.findAddressByCode(code) == null) {
+                        throw new StoreException(StoreErrorCode.INVALID_ADDRESS);
+                    }
+                }
+        );
+
+        store.registerDeliveryArea(request.addressCodeList());
+
+        return StoreResponse.of(store);
+    }
+
+
+
     // 가게 단건 조회
     public StoreResponse getStoreById(Long id) {
-        Store store = findStoreById(id);
-        return StoreResponse.of(store);
+        StoreResponse storeResponse = (StoreResponse) storeRedisTemplate.opsForValue().get(STORE_CACHE_PREFIX + id);
+        if (storeResponse == null) {
+            Store store = findStoreById(id);
+            storeResponse = StoreResponse.of(store);
+
+            storeRedisTemplate.opsForValue().set(STORE_CACHE_PREFIX + store.getId(), storeResponse, CACHE_EXPIRATION);
+        }
+
+        return storeResponse;
+    }
+
+    public List<StoreResponse> getStoresByUser(Long addressCode) {
+        return findStoresByAddressCode(addressCode).stream().map(StoreResponse::of).toList();
     }
 
     // 가게 전체 조회
@@ -74,8 +129,6 @@ public class StoreService {
         storeRepository.delete(store);
     }
 
-
-
     // ID로 상점을 찾는 공통 메서드
     private Store findStoreById(Long id) {
         return storeRepository.findById(id).orElseThrow(
@@ -83,4 +136,8 @@ public class StoreService {
         );
     }
 
+    // 법정동별 상점 조회
+    private List<Store> findStoresByAddressCode(Long addressCode) {
+        return customStoreRepository.findStoresByAddressCode(addressCode);
+    }
 }
